<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        tools:context=".TriggerCreationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toTopOf="@+id/button_next"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/box_margin"
                    android:background="@drawable/round_border"
                    android:orientation="vertical"
                    android:padding="4dp"
                    android:visibility="gone">

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/trigger_name"
                        android:text="@string/trigger_name" />

                <EditText
                        android:id="@+id/trigger_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:text="@string/trigger_name_placeholder" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/box_margin"
                    android:layout_weight="38"
                    android:background="@drawable/round_border"
                    android:orientation="vertical">

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <org.osmdroid.views.MapView
                            android:id="@+id/map"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            tools:background="@drawable/map_placeholder" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="36dp">


                        <SearchView
                                android:id="@+id/map_search"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                android:layout_weight="90"
                                android:background="@drawable/round_border"
                                android:clickable="false"
                                android:focusable="false"
                                android:hint="@string/hint_map_search"

                                android:importantForAutofill="no"
                                android:inputType="text|textPersonName"
                                android:padding="0dp"
                                android:visibility="invisible" />

                        <androidx.appcompat.widget.AppCompatImageButton
                                android:id="@+id/my_location_button"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                android:layout_weight="9"
                                android:background="@drawable/round_border"
                                android:contentDescription="@string/go_to_my_location"
                                android:padding="5dp"
                                android:scaleType="centerInside"
                                app:srcCompat="@drawable/ic_my_location_black" />
                    </LinearLayout>

                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="64dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/box_margin"
                        android:layout_weight="0.5"
                        android:background="@drawable/round_border"
                        android:orientation="vertical"
                        android:padding="4dp">

                    <TextView
                            android:id="@+id/radius_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Radius (100m)"
                            android:textAlignment="center"
                            tools:ignore="HardcodedText"
                            android:maxLines="1"/>

                    <SeekBar
                            android:id="@+id/trigger_radius"
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            tools:progress="20" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/box_margin"
                        android:layout_weight="0.5"
                        android:background="@drawable/round_border"
                        android:orientation="vertical"
                        android:padding="4dp">

                    <TextView
                            android:id="@+id/trigger_direction_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/trigger_direction_entry"
                            android:textAlignment="center"
                            android:maxLines="1"/>

                    <ToggleButton
                            android:id="@+id/trigger_direction"
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:layout_margin="0dp"
                            android:background="@color/contactBackground"
                            android:checked="true"

                            android:padding="0dp"
                            android:textOff="@string/trigger_direction_on_leave"
                            android:textOn="@string/trigger_direction_on_enter"

                            android:textSize="7pt" />
                </LinearLayout>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/box_margin"
                    android:layout_weight="30"
                    android:background="@drawable/round_border"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="6dp"
                    app:layout_constraintBottom_toTopOf="@+id/button_next"
                    app:layout_constraintTop_toTopOf="parent">

                <SearchView
                        android:id="@+id/contacts_search"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_margin="0dp"
                        android:background="@drawable/round_border"
                        android:clickable="true"
                        android:focusable="true"
                        android:hint="@string/hint_contact_phone"
                        android:importantForAutofill="no"
                        android:inputType="phone|text|textPersonName"
                        android:maxHeight="38dp"
                        android:minHeight="0dp"
                        android:padding="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/contacts_list"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/contacts_list"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="0dp"
                        android:padding="0dp"
                        app:layout_constrainedHeight="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/contacts_search"
                        tools:listitem="@layout/contact_item" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <EditText
                    android:id="@+id/trigger_message"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_margin="@dimen/box_margin"
                    android:layout_weight="0"
                    android:background="@drawable/round_border"
                    android:gravity="start|top"
                    android:hint="@string/text_message"
                    android:importantForAutofill="no"
                    android:inputType="textShortMessage"
                    android:padding="4dp">

            </EditText>

        </LinearLayout>

        <Button
                android:id="@+id/button_next"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="4dp"
                android:layout_weight="15"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>