<resources>
    <string name="app_name">AutoSMS</string>
    <string name="action_settings">Settings</string>
    <string name="icon_of_the_trigger">Icon of the trigger</string>
    <string name="trigger_creation">Create new trigger</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="trigger_name">Trigger name</string>
    <string name="trigger_name_placeholder">New trigger</string>
    <string name="hint_contact_phone">Type contact name or phone number</string>
    <string name="next">Next</string>
    <string name="contact_icon_desc">Contact\'s profile picture</string>
    <string name="selected">Selected</string>
    <string name="hint_map_search">Type a city name or a street</string>
    <string name="add">Add</string>
    <string name="text_message">Text message</string>
    <string name="action_flush_database">Flush database</string>
    <string name="radius_info_text">Radius ({0}m)</string>
    <string name="channel_name">Auto SMS notifications</string>
    <string name="channel_desc">SMS location information</string>
    <string name="trigger_direction_entry">Trigger entry direction</string>
    <string name="trigger_direction_on_enter">On enter</string>
    <string name="trigger_direction_on_leave">On leave</string>
    <string name="tab_planned">Pending</string>
    <string name="tab_all">All</string>
    <string name="tab_completed">Completed</string>
    <string name="search">Search</string>
    <string name="element_selected">Element Selected</string>
    <string name="menu_options">Menu options</string>
    <string name="go_to_my_location">Go to my location</string>
    <string name="action_about">About</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_restart">Restart</string>
    <string name="menu_remove">Remove</string>
    <string name="permission_dialog_title">Need permission</string>
    <string name="permission_dialog_message">Application needs permission to function properly</string>
    <string name="permission_dialog_contacts">Application needs permission to show contacts list</string>
    <string name="permission_dialog_map_storage">Application needs access to external storage to cache map data for smoother map experience</string>
    <string name="permission_dialog_location">Application needs to access fine location to know precise location of the device to send an SMS or show it on the map</string>
    <string name="save">Save</string>
    <string name="permission_dialog_sms">Application needs this permission to send specified text messages. Without this permission any message won\'t be send!</string>
    <string name="fab_autoreply">Auto-reply</string>
    <string name="fab_timeanddate">Time and date</string>
    <string name="fab_location">Location</string>
    <string name="not_implemented_autoreply">Auto-reply not implemented</string>
    <string name="notification_default_title">Auto SMS location trigger</string>
    <string name="trigger_builder_exception_nomessage">Text message cannot be empty</string>
    <string name="trigger_builder_exception_nocontacts">At least one contact must be selected</string>
    <string name="trigger_builder_exception_noentrydirection">Entry direction must be selected</string>
    <string name="trigger_builder_exception_noradius">Radius must be specified</string>
    <string name="trigger_builder_exception_nocoordinate">Geographic coordinate must be selected</string>
    <string name="trigger_builder_exception_nodate">Date must be specified</string>
    <string name="trigger_builder_exception_datepast">Date cannot be set to the past</string>
    <string name="trigger_builder_exception_unknown">Unknown trigger builder exception</string>
    <string name="error_cannot_save_message">Cannot save message!</string>
    <string name="action_refresh">Refresh</string>
    <string name="dialog_this_will_delete_all_messages">This action will delete all planned messages</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_no">No</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_about_content">Application allows SMS text messages that will be sent automatically by the system. User can specify that at which they will be sent or area where the message there sent from.\n</string>
</resources>
